fix first two sections

--- a/index.html
+++ b/index.html
@@ -125,58 +125,60 @@
       <br />
       <section class="interests pt-5 pb-5">
         <h2 class="display-6">Tech I'm familiar with</h2>
-        <div class="tech-items">
-          <div class="icon-box">
-            <img class="tech-icon" src="img\python.png" height="32px" />
-            <h3>Python</h3>
-          </div>
-          <div class="icon-box">
-            <img
-              class="tech-icon"
-              src="img\java-removebg-preview.png"
-              height="32px"
-            />
-            <h3>Java</h3>
-          </div>
-          <div class="icon-box">
-            <img class="tech-icon" src="img\cpp.png" height="32px" />
-            <h3>C++</h3>
-          </div>
-          <div class="icon-box">
-            <img class="tech-icon" src="img\js.png" height="32px" />
-            <h3>JavaScript</h3>
-          </div>
-          <div class="icon-box">
-            <img class="tech-icon" src="img\C.png" height="32px" />
-            <h3>C</h3>
-          </div>
-          <div class="icon-box">
-            <img
-              class="tech-icon"
-              src="img\nodejsfinal-removebg-preview (1).png"
-              height="32px"
-            />
-            <h3>Node.js</h3>
-          </div>
-          <div class="icon-box">
-            <img class="tech-icon" src="img\react.png" height="32px" />
-            <h3>React</h3>
-          </div>
-          <div class="icon-box">
-            <img class="tech-icon" src="img\bootstrap.png" height="32px" />
-            <h3>Bootstrap</h3>
-          </div>
-          <div class="icon-box">
-            <img class="tech-icon" src=" img\html.png" height="32px" />
-            <h3>HTML</h3>
-          </div>
-          <div class="icon-box">
-            <img class="tech-icon" src="img\css.png" height="32px" />
-            <h3>CSS</h3>
-          </div>
-          <div class="icon-box">
-            <img class="tech-icon" src="img\git.png" height="32px" />
-            <h3>Git</h3>
+        <div class="tech-items-wrap">
+          <div class="tech-items">
+            <div class="icon-box">
+              <img class="tech-icon" src="img\python.png" height="32px" />
+              <h3>Python</h3>
+            </div>
+            <div class="icon-box">
+              <img
+                class="tech-icon"
+                src="img\java-removebg-preview.png"
+                height="32px"
+              />
+              <h3>Java</h3>
+            </div>
+            <div class="icon-box">
+              <img class="tech-icon" src="img\cpp.png" height="32px" />
+              <h3>C++</h3>
+            </div>
+            <div class="icon-box">
+              <img class="tech-icon" src="img\js.png" height="32px" />
+              <h3>JavaScript</h3>
+            </div>
+            <div class="icon-box">
+              <img class="tech-icon" src="img\C.png" height="32px" />
+              <h3>C</h3>
+            </div>
+            <div class="icon-box">
+              <img
+                class="tech-icon"
+                src="img\nodejsfinal-removebg-preview (1).png"
+                height="32px"
+              />
+              <h3>Node.js</h3>
+            </div>
+            <div class="icon-box">
+              <img class="tech-icon" src="img\react.png" height="32px" />
+              <h3>React</h3>
+            </div>
+            <div class="icon-box">
+              <img class="tech-icon" src="img\bootstrap.png" height="32px" />
+              <h3>Bootstrap</h3>
+            </div>
+            <div class="icon-box">
+              <img class="tech-icon" src=" img\html.png" height="32px" />
+              <h3>HTML</h3>
+            </div>
+            <div class="icon-box">
+              <img class="tech-icon" src="img\css.png" height="32px" />
+              <h3>CSS</h3>
+            </div>
+            <div class="icon-box">
+              <img class="tech-icon" src="img\git.png" height="32px" />
+              <h3>Git</h3>
+            </div>
           </div>
         </div>
       </section>
