--- a/index.html
+++ b/index.html
@@ -404,11 +404,14 @@
           </div>
         </div>
       </section>
-      <section id="Blogs">
-        <h2 class="display-6"><span style="color: white"> Blogs</span></h2>
-        <br />
-        <br />
-        <div class="div1">
+      <h2 style="margin-bottom: 24px" class="display-6">
+        <span style="color: white"> Blogs</span>
+      </h2>
+      <section
+        id="Blogs"
+        style="display: flex; justify-content: space-between; padding: 100px"
+      >
+        <div>
           <a
             href="https://reach-ananya-singhal.medium.com/artificial-intelligence-using-azure-and-opencv-1543a9fa7105"
             target="_blank"
@@ -424,7 +427,7 @@
             </p>
           </a>
         </div>
-        <div class="div2">
+        <div>
           <a
             href="https://reach-ananya-singhal.medium.com/artificial-intelligence-using-azure-and-opencv-1543a9fa7105"
             target="_blank"
@@ -435,23 +438,7 @@
                 style="color: #50d890; text-decoration: none"
                 href="https://reach-ananya-singhal.medium.com/artificial-intelligence-using-azure-and-opencv-1543a9fa7105"
                 target="_blank"
-                >Introduction to Artificial Intelligence and Machine Learning</a
-              >
-            </p>
-          </a>
-        </div>
-        <div class="div3">
-          <a
-            href="https://reach-ananya-singhal.medium.com/artificial-intelligence-using-azure-and-opencv-1543a9fa7105"
-            target="_blank"
-          >
-            <img class="img-fluid" src="img\opencv-blog.jpg" />
-            <p>
-              <a
-                style="color: #50d890; text-decoration: none"
-                href="https://reach-ananya-singhal.medium.com/artificial-intelligence-using-azure-and-opencv-1543a9fa7105"
-                target="_blank"
-                >Introduction to Artificial Intelligence and Machine Learning</a
+                >Generation Google Scholarship APAC</a
               >
             </p>
           </a>
@@ -486,7 +473,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="./app.js" type="text.javascript"></script>
     <script>
       AOS.init();
     </script>
