--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                   >
                 </h1>
                 <p>
-                  Conducted retrispection on 0502 Release testing cycle for programs like MCC & GOP. Identified product team level defect trend analysis.<br />
+                  Conducted retrospection on 0502 Release testing cycle for programs like MCC & GOP. Identified product team level defect trend analysis.<br />
                   Suggested process improvements for effective methods for faster defect resolution per product team. Supported 0802 GOP testing cycle in IST timezone.
                   <br /> <font color="#a7f2ca">Skills developed: Transformer · FSL · Medical Imaging </font>
                 </p>
