hrefs working now

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <nav>
       <ul id="primary-navigation" class="primary-navigation flex">
         <li class="active">
-          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="">
+          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href=".about-me-section">
             <span aria-hidden="true">00</span>Home
           </a>
         <li>
-          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="">
+          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href=".display-6">
             <span 
               aria-hidden="true">01</span>Experience
             </a> 
