--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <nav>
       <ul id="primary-navigation" class="primary-navigation flex">
         <li class="active">
-          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href=".about-me-section">
+          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="aboutme">
             <span aria-hidden="true">00</span>Home
           </a>
         <li>
@@ -74,7 +74,7 @@
         </div>
       </div>
     </header>
-    <div class="about-me-section">
+    <div class="about-me-section" id="aboutme">
       <div class="flex" style="justify-content: space-between">
         <div class="about-me-item">
           <h1 class="about-me-header section-header">A little about me</h1>
