--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <nav>
       <ul id="primary-navigation" class="primary-navigation flex">
         <li class="active">
-          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="aboutme">
+          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#aboutme">
             <span aria-hidden="true">00</span>Home
           </a>
         <li>
