--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <span aria-hidden="true">00</span>Home
           </a>
         <li>
-          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href=".display-6">
+          <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#workex">
             <span 
               aria-hidden="true">01</span>Experience
             </a> 
@@ -53,7 +53,7 @@
           <span 
               aria-hidden="true">02</span>Awards
             </a>  
-        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="">
+        <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#projects">
           <span 
               aria-hidden="true">03</span>Projects
             </a>  
@@ -215,7 +215,7 @@
       </section>
       <br />
 
-      <h2 class="display-6" div data-aos="zoom-in-up">
+      <h2 class="display-6" div data-aos="zoom-in-up" id="workex">
         <span style="color: white"> Work Experience</span>
       </h2>
       <div class="container" div data-aos="zoom-in-up">
@@ -376,7 +376,7 @@
 
 
       <!-- PROJECTS -->
-      <h2 class="display-6"><span style="color: white"> Projects</span></h2>
+      <h2 class="display-6" id="projects"><span style="color: white"> Projects</span></h2>
       <section id="projects" style="height: 1500px">
         <div class="container">
           <div class="project-wrapper">
