--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
 
     <!-- UPDATED CONTENT SHOWCASE SECTION -->
-    <section class="content-showcase">
+    <section class="content-showcase" style="padding-bottom: 40px;">
       <div class="showcase-container">
         <!-- Left Side: Updates with heading -->
         <div class="updates-section">
