--- a/Publications.html
+++ b/Publications.html
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <!-- Main Content -->
+    <!-- PUBLICATIONS -->
     <div class="publications-container">
       <!-- Publications Timeline -->
       <div class="pub-timeline-container">
@@ -187,6 +187,8 @@
         </a>
       </div>
     </div>
+
+    
 
     <!-- Footer -->
     <div class="footer">
