--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 
     <div class="about-me-section" id="aboutme">
-      <h1 class="section-header">About Me</h1>
+      <h1 class="section-header">about me</h1>
       <div class="about-me-container">
         <div class="about-me-bio">
           <p class="description">
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="about-me-social">
-          <h2>Let's connect!</h2>
+          <h2>let's connect!</h2>
           <ul class="social-links">
               <li>
                   <a href="mailto:as146@snu.edu.in" target="_blank" title="Email">
@@ -141,7 +141,7 @@
       <div class="showcase-container">
         <!-- Left Side: Updates with heading -->
         <div class="updates-section">
-          <h2 class="updates-header">Updates</h2>
+          <h2 class="updates-header">updates</h2>
           <div class="updates-wrapper">
 
             <div class="updates-timeline">
@@ -216,19 +216,19 @@
         <div class="vertical-navigation">
           <a href="publications.html" class="nav-item">
             <span class="nav-number">00</span>
-            <span class="nav-text">Publications</span>
+            <span class="nav-text">publications</span>
           </a>
           <a href="experience.html" class="nav-item">
             <span class="nav-number">01</span>
-            <span class="nav-text">Experience</span>
+            <span class="nav-text">experience</span>
           </a>
           <a href="projects.html" class="nav-item">
             <span class="nav-number">02</span>
-            <span class="nav-text">Projects</span>
+            <span class="nav-text">projects</span>
           </a>
           <a href="awards.html" class="nav-item">
             <span class="nav-number">03</span>
-            <span class="nav-text">Awards</span>
+            <span class="nav-text">awards</span>
           </a>
         </div>
       </div>
