--- a/awards.html
+++ b/awards.html
@@ -652,26 +652,26 @@
         </div>
         
         <!-- Award Item 3 -->
-        <div class="award-card" data-category="innovation">
+        <div class="award-card" data-category="grants">
           <div class="award-banner" style="background-image: url('/api/placeholder/400/320')">
-            <div class="award-year">2023</div>
-            <div class="category-tag">Innovation</div>
+            <div class="award-year">2021</div>
+            <div class="category-tag">Grants</div>
           </div>
           <div class="award-content">
-            <h3 class="award-title">Healthcare Innovation Challenge Winner</h3>
+            <h3 class="award-title">Udacity AWS Machine Learning Scholarship</h3>
             <div class="award-issuer">
               <div class="issuer-logo">
                 <i class="fas fa-lightbulb"></i>
               </div>
-              <div class="issuer-name">MIT Health Tech Initiative</div>
+              <div class="issuer-name">Udacity</div>
             </div>
             <div class="award-description">
-              <p>First place in the annual Health Tech Innovation Challenge for developing an AI-powered mobile application that helps predict and prevent seizures in epilepsy patients using wearable device data.</p>
+              <p>Recipient of the AWS Machine Learning Scholarship Program by Udacity, which provided access to the exclusive AWS MLE Foundations course. Selected from a competitive applicant pool based on technical aptitude and commitment to advancing machine learning skills.</p>
             </div>
             <div class="award-footer">
               <div class="award-badge">
-                <i class="fas fa-trophy badge-icon"></i>
-                <span class="badge-text">$25,000 Grant</span>
+                <i class="fas fa-trophy badge-icon">Full-Ride Recipient</i>
+                <span class="badge-text"></span>
               </div>
               <a href="#" class="award-link">
                 <i class="fas fa-external-link-alt"></i>
