--- a/experience.html
+++ b/experience.html
@@ -1025,9 +1025,8 @@
 
     <!-- Footer -->
     <div class="footer">
-      <p>
-        Built with <i class="fas fa-heart pulse"></i> by Ananya Singhal 
-      </p>
+      <p>Designed & Built with <i class="fas fa-heart pulse"></i> by Ananya Singhal</p>
+      <p>&copy; 2025 All Rights Reserved</p>
     </div>
 
     <!-- Scripts -->
