--- a/index.html
+++ b/index.html
@@ -511,11 +511,11 @@
     </div>
 
     <!-- Footer -->
-    <div class="footer" style = "margin-top: 550px;">
-      <span>
-        Made with <i class="fa fa-heart pulse"></i> by <a>Ananya</a>
-      </span>
-    </div>
+    <footer class="footer">
+      <p>Designed & Built with <i class="fas fa-heart pulse"></i> by Ananya Singhal</p>
+      <p>&copy; 2025 All Rights Reserved</p>
+    </footer>
+
 
     
 
