--- a/awards.html
+++ b/awards.html
@@ -812,9 +812,8 @@
 
     <!-- Footer -->
     <div class="footer">
-      <span>
-        Made with <i class="fa fa-heart pulse"></i> by <a>Ananya</a>
-      </span>
+      <p>Designed & Built with <i class="fas fa-heart pulse"></i> by Ananya Singhal</p>
+      <p>&copy; 2025 All Rights Reserved</p>
     </div>
 
     <!-- Scripts -->
