Improved the awards page + updated experience section

--- a/experience.html
+++ b/experience.html
@@ -722,12 +722,12 @@
               </div>
             </div>
             <div class="timeline-logo">
-              <i class="fa-solid fa-microscope"></i>
+              <i class="fa-solid fa-brain"></i>
             </div>
           </div>
           <div class="timeline-description">
             <ul>
-              <li>Working on denoising high b-value diffusion MRI brain data by obtaining brain tissue microstructure information from T2 relaxometry MRI data using multi-compartment models.</li>
+              <li>Enhanced analytical denoising methods for high b-value diffusion data by implementing a gradient-based kernel allocation system that automatically preserves anatomical structures, applying targeted smoothing based on regional complexity for superior detail retention.</li>
               <!-- <li></li> -->
               <!-- <li></li> -->
             </ul>
@@ -842,7 +842,7 @@
               </div>
             </div>
             <div class="timeline-logo">
-              <i class="fa-solid fa-code"></i>
+              <i class="fa-solid fa-laptop-code"></i>
             </div>
           </div>
           <div class="timeline-description">
@@ -881,7 +881,7 @@
               </div>
             </div>
             <div class="timeline-logo">
-              <i class="fa-solid fa-code"></i>
+              <i class="fa-solid fa-brain"></i>
             </div>
           </div>
           <div class="timeline-description">
@@ -920,7 +920,7 @@
               </div>
             </div>
             <div class="timeline-logo">
-              <i class="fa-solid fa-code"></i>
+              <i class="fa-solid fa-user-check"></i>
             </div>
           </div>
           <div class="timeline-description">
@@ -959,7 +959,7 @@
               </div>
             </div>
             <div class="timeline-logo">
-              <i class="fa-solid fa-code"></i>
+              <i class="fa-solid fa-video"></i>
             </div>
           </div>
           <div class="timeline-description">
@@ -995,11 +995,11 @@
               <h2 class="timeline-title">International Institute of Information Technology Hyderabad (IIITH)</h2>
               <div class="timeline-company">
                 <span class="company-badge">Research Intern @CVIT Lab</span>
-                <span class="company-location"><i class="fas fa-map-marker-alt"></i> Singapore</span>
+                <span class="company-location"><i class="fas fa-map-marker-alt"></i> Hyderabad</span>
               </div>
             </div>
             <div class="timeline-logo">
-              <i class="fa-solid fa-code"></i>
+              <i class="fa-solid fa-eye"></i>
             </div>
           </div>
           <div class="timeline-description">
