--- a/experience.html
+++ b/experience.html
@@ -767,16 +767,17 @@
           </div>
           <div class="timeline-description">
             <ul>
-              <li>Developed a tract-based classification method leveraging sparse diffusion measurements for early detection of Alzheimer’s disease, improving early diagnostic accuracy and reducing the need for extensive data acquisition</li>
-              <li></li>
+              <li>Developed GraphNeuralMRI framework for early Alzheimer's disease detection using diffusion MRI data, achieving 98.9% accuracy in CN vs MCI classification and 97.99% in CN vs AD classification.</li>
+              <li>Engineered histogram-based connectivity features from brain networks derived from tractography fiber counts, significantly outperforming traditional machine learning approaches (68-79% accuracy).</li>
+              <li>Implemented and compared multiple graph neural network architectures (GCN, GAT, ARMAConv) in a transductive learning setup to capture subtle connectivity alterations characteristic of neurodegeneration stages.</li>
             </ul>
           </div>
           <div class="timeline-skills">
-            <span class="skill-tag">Machine Learning</span>
-            <span class="skill-tag">SQL</span>
-            <span class="skill-tag">Data Analysis</span>
             <span class="skill-tag">Python</span>
-            <span class="skill-tag">Data Science</span>
+            <span class="skill-tag">GNNs</span>
+            <span class="skill-tag">Dipy</span>
+            <!-- <span class="skill-tag">Python</span>
+            <span class="skill-tag">Data Science</span> -->
           </div>
         </div>
       </div>
@@ -811,11 +812,11 @@
             </ul>
           </div>
           <div class="timeline-skills">
-            <span class="skill-tag">Machine Learning</span>
-            <span class="skill-tag">SQL</span>
-            <span class="skill-tag">Data Analysis</span>
+            <span class="skill-tag">SQL Server</span>
+            <span class="skill-tag">Pandas</span>
+            <span class="skill-tag">Scikit-learn</span>
             <span class="skill-tag">Python</span>
-            <span class="skill-tag">Data Science</span>
+            <!-- <span class="skill-tag">Data Science</span> -->
           </div>
         </div>
       </div>
@@ -847,15 +848,17 @@
           </div>
           <div class="timeline-description">
             <ul>
-              <li>Developed a private ChatGPT system for internal document-based PDF-Q&A tasks using the GPT4ALL language model and LangChain framework, enabling employees to query information from the company's knowledge repository.</li>
+              <li>Architected and deployed an internal knowledge management system using GPT4ALL, LangChain, FAISS vector database, and PyPDF2 that enables employees to query 100+ company documents through natural language, reducing information retrieval time. </li>
+              <li>Implemented an end-to-end document processing pipeline with sentence-transformers for embedding generation, Chroma DB for efficient vector storage, and a Flask/FastAPI backend.</li>
             </ul>
           </div>
           <div class="timeline-skills">
-            <span class="skill-tag">NLP</span>
+            <!-- <span class="skill-tag">NLP</span> -->
             <span class="skill-tag">LangChain</span>
+            <span class="skill-tag">GPT4ALL/LLMs</span>
             <span class="skill-tag">PyTorch</span>
-            <span class="skill-tag">AI</span>
-            <span class="skill-tag">LLMs</span>
+            <span class="skill-tag">PyPDF2/PDF Processing</span>
+            <span class="skill-tag">Python</span>
           </div>
         </div>
       </div>
@@ -891,11 +894,15 @@
             </ul>
           </div>
           <div class="timeline-skills">
-            <span class="skill-tag">NLP</span>
-            <span class="skill-tag">FSL</span>
             <span class="skill-tag">PyTorch</span>
-            <span class="skill-tag">AI</span>
-            <span class="skill-tag">LLMs</span>
+            <span class="skill-tag">NiBable</span>
+            <span class="skill-tag">SimpleITK</span>
+            <span class="skill-tag">Tractography</span>
+            <span class="skill-tag">FSL (FMRIB Software Library)</span>
+            <span class="skill-tag">MRtrix3</span>
+            <span class="skill-tag">Dipy (Diffusion Imaging in Python)</span>
+            <span class="skill-tag">ANTs (Advanced Normalization Tools)</span>
+            <!-- <span class="skill-tag"></span> -->
           </div>
         </div>
       </div>
@@ -925,15 +932,20 @@
           </div>
           <div class="timeline-description">
             <ul>
-              <li>Working on a 3D-Structured Light Facial Recognition model that projects speckle light spots to calculate depth for anti-spoofing.</li>
+              <li>Contributed to a multimodal biometric authentication system using finger vein and fingerprint data, enhancing spoof
+                resistance through feature-level fusion. Supported preprocessing (CLAHE, ROI extraction) and deep learning-based
+                verification using Siamese networks, achieving 95%+ accuracy.</li>
             </ul>
           </div>
           <div class="timeline-skills">
-            <span class="skill-tag">NLP</span>
-            <span class="skill-tag">LangChain</span>
-            <span class="skill-tag">PyTorch</span>
-            <span class="skill-tag">AI</span>
-            <span class="skill-tag">LLMs</span>
+            <span class="skill-tag">TensorFlow</span>
+            <span class="skill-tag">OpenCV</span>
+            <span class="skill-tag">scikit-image</span>
+            <span class="skill-tag">Siamese Networks</span>
+            <span class="skill-tag">CLAHE (Contrast Limited Adaptive Histogram Equalization)</span>
+            <span class="skill-tag">CNN/ResNet</span>
+            <span class="skill-tag">NumPy/SciPy</span>
+            <!-- <span class="skill-tag"></span> -->
           </div>
         </div>
       </div>
@@ -969,11 +981,12 @@
             </ul>
           </div>
           <div class="timeline-skills">
-            <span class="skill-tag">NLP</span>
-            <span class="skill-tag">LangChain</span>
-            <span class="skill-tag">PyTorch</span>
-            <span class="skill-tag">AI</span>
-            <span class="skill-tag">LLMs</span>
+            <span class="skill-tag">TensorFlow</span>
+            <span class="skill-tag">OpenCV</span>
+            <!-- <span class="skill-tag">LSTM/RNN</span> -->
+            <span class="skill-tag">LRCN (CNN + LSTM)/</span>
+            <span class="skill-tag">Streamlit</span>
+            <span class="skill-tag">Google Maps API</span>
           </div>
         </div>
       </div>
@@ -1010,11 +1023,11 @@
             </ul>
           </div>
           <div class="timeline-skills">
-            <span class="skill-tag">NLP</span>
-            <span class="skill-tag">LangChain</span>
             <span class="skill-tag">PyTorch</span>
-            <span class="skill-tag">AI</span>
-            <span class="skill-tag">LLMs</span>
+            <span class="skill-tag">OpenCV</span>
+            <span class="skill-tag">Dlib</span>
+            <span class="skill-tag">MTCNN</span>
+            <!-- <span class="skill-tag">LLMs</span> -->
           </div>
         </div>
       </div>
