--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
               </li>
 
               <!-- add google scholar  -->
-              <li>
+              <!-- <li>
                 <a href="https://medium.com/@reach-ananya-singhal" target="_blank" title="Medium">
                     <i class="fab fa-medium"></i>
                 </a>
-              </li>
+              </li> -->
               <!-- <li>
                   <a href="https://www.youtube.com/channel/UCon64O0_4dAQ14bYeLNR-cA" target="_blank" title="YouTube">
                       <i class="fab fa-youtube"></i>
@@ -240,7 +240,7 @@
           </ul>
       
           <div class="resume-btn-container">
-              <a href="" target="_blank" class="resume-btn">
+              <a href="https://drive.google.com/file/d/1lQMG40EAy46YPzwKRFW2R8rSQwDDqTqp/view?usp=sharing" target="_blank" class="resume-btn">
                   <i class="fas fa-download"></i> Download Resume
               </a>
           </div>
@@ -500,7 +500,7 @@
           </a>
           
           <a href="projects.html" class="nav-item">
-            <span class="nav-number">05</span>
+            <span class="nav-number">04</span>
             <span class="nav-text">projects</span>
           </a>
           <a href="awards.html" class="nav-item">
