--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <div class="update-date">1<sup>st</sup>May<br>2024</div>
                 <div class="update-content">
                   <h3>Research Assistant at Shiv Nadar University</h3>
-                  <p>Developed a tract-based classification method leveraging sparse diffusion measurements for early detection of Alzheimer’s disease, improving early diagnostic accuracy and reducing the need for extensive data acquisition. </p>
+                  <p>Developed a tract-based classification method leveraging sparse diffusion measurements for early detection of Alzheimer's disease, improving early diagnostic accuracy and reducing the need for extensive data acquisition. </p>
                 </div>
               </div>
 
@@ -569,5 +569,6 @@
       AOS.init();
     </script>
     <script src="navigation.js"></script>
+    <script src="canvas-handler.js"></script>
   </body>
 </html>
