--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     </div>
 
     <!-- UPDATED CONTENT SHOWCASE SECTION -->
-    <section class="content-showcase" style="padding-bottom: 40px;">
+    <section class="content-showcase" style="padding-bottom: 40px; padding-left: 10px; padding-right: 10px;">
       <div class="showcase-container">
         <!-- Left Side: Updates with heading -->
         <div class="updates-section">
