--- a/index.html
+++ b/index.html
@@ -109,13 +109,9 @@
     <!-- Mobile Sidebar Navigation (hidden by default) -->
     <div class="mobile-sidebar">
       <div class="sidebar-header">
-        <div class="sidebar-close"></div>
+        <!-- Removing the sidebar-close div that's creating the gray cross -->
       </div>
       <div class="sidebar-content">
-        <a href="index.html" class="sidebar-item">
-          <span class="nav-number">00</span>
-          <span class="nav-text">About</span>
-        </a>
         <a href="publications.html" class="sidebar-item">
           <span class="nav-number">01</span>
           <span class="nav-text">Publications</span>
