fixed authors in publications

--- a/publications.html
+++ b/publications.html
@@ -227,7 +227,7 @@
             </div>
           </div>
           <div class="pub-authors">
-            Abhishek Tiwari, <span class="author-highlight">Ananya Singhal</span>, Saurabh J. Shigwan, <br> Rajeev Kumar Singh
+            Abhishek Tiwari, <span class="author-highlight">Ananya Singhal</span>, Saurabh J. Shigwan, Rajeev Kumar Singh
           </div>
           <div class="pub-abstract">
             <p>This research presents a novel deep learning framework for early diagnosis of Frontotemporal dementia (FTD), a devastating neurodegenerative disorder affecting the frontal and temporal lobes of the brain. FTD leads to cognitive decline and behavioral changes, occurring in approximately 15-22 people per 100,000 worldwide (1.2-1.8 million people globally). Early and accurate diagnosis is crucial for timely interventions and appropriate patient care.</p>
@@ -289,7 +289,7 @@
             </div>
           </div>
           <div class="pub-authors">
-            Abhishek Tiwari, <span class="author-highlight">Ananya Singhal</span>, Saurabh J. Shigwan, <br> Rajeev Kumar Singh
+            Abhishek Tiwari, <span class="author-highlight">Ananya Singhal</span>, Saurabh J. Shigwan, Rajeev Kumar Singh
           </div>
           <div class="pub-abstract">
             <p>Our research investigates using Transformer-based deep learning to accelerate diffusion tensor imaging (DTI) processing and improve early Alzheimer's disease diagnosis. By applying advanced attention mechanisms, we've developed a model that generates critical quantitative measures using significantly fewer diffusion directions than traditional methods.
