--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,7 @@
         transform: translateX(0) !important;
       }
     </style>
+    <link rel="icon" href="img/a_favicon_1.png" />
   </head>
 
   <body>
