--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="Screenshot 2021-06-16 225806.jpg" />
+    <link rel="icon" href="img/a_favicon_1.png" />
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
