--- a/publications.html
+++ b/publications.html
@@ -13,7 +13,7 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
-    <link rel="icon" href="Screenshot 2021-06-16 225806.jpg" />
+    <link rel="icon" href="img/a_favicon_1.png" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
