updated the color

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div id="large-header" class="large-header">
           <canvas id="demo-canvas" width="100%"></canvas>
           <div class="main-title">
-            <h1 class="main-title-header"><strong>Ananya Singhal</strong></h1>
+            <h1 class="main-title-header"><strong><span>Ananya</span> <span>Singhal</span></strong></h1>
             <!-- Add this to your small-title paragraph in the main-title div -->
             <p class="small-title">
               <strong>
