--- a/publications.html
+++ b/publications.html
@@ -89,7 +89,7 @@
     <nav class="main-nav">
       <div class="nav-container">
         <div class="nav-logo">
-          <a href="index.html"><span class="bold-name">Ananya</span> Singhal</a>
+          <a href="index.html"><span class="bold-name">Ananya</span> <span>Singhal</span></a>
         </div>
         <div class="nav-links">
           <a href="index.html" class="nav-item">
